<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Mcom_units">

    <ImageView
        android:id="@+id/mcom_units_back"
        android:layout_width="34dp"
        android:layout_height="24dp"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="47dp" />

    <Button
        android:id="@+id/prev_btn"
        android:layout_width="109dp"
        android:layout_height="41dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/bold"
        android:text="@string/prrevious"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/answer_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/answer_btn"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/bold"
        android:text="@string/answer"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_btn"
        app:layout_constraintStart_toEndOf="@+id/prev_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="104dp"
        android:layout_height="38dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/bold"
        android:text="@string/next"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/answer_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_btn2"
        android:layout_width="104dp"
        android:layout_height="38dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/bold"
        android:text="@string/submit"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/answer_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/mcom_units"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/displat_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/bold"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <Button
        android:id="@+id/op1"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:gravity="center|start"
        android:text="@string/o1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displat_q" />

    <Button
        android:id="@+id/op3"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginTop="172dp"
        android:gravity="center|start"
        android:text="@string/o1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displat_q" />

    <Button
        android:id="@+id/op4"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginTop="228dp"
        android:gravity="center|start"
        android:text="@string/o1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displat_q" />

    <Button
        android:id="@+id/op2"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginTop="116dp"
        android:gravity="center|start"
        android:text="@string/o1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displat_q" />

</androidx.constraintlayout.widget.ConstraintLayout>